tests/sksl/errors/RedeclareShaderType.glsl
### Compilation failed:

error: 1: expected an identifier, but found type 'shader'
uniform shader shader;
               ^^^^^^
1 error
